fix: Set font size to be larger so it's readable

--- a/src/assets/css/question.css
+++ b/src/assets/css/question.css
@@ -36,7 +36,7 @@
 
 .questionlist__menu-item-title {
 	text-align: center;
-	font-size: .75rem;
+	font-size: .90rem;
 	color: #29ABE3;
 }
 
